--- a/index.html
+++ b/index.html
@@ -43,9 +43,23 @@
 
                 <div class="video-item">
                     <iframe src="TU_ENLACE_EMBED_VIDEO_2" frameborder="0" allowfullscreen></iframe>
-                    <h3>Video 2: Sabores de la Yunga (Cultura y Sabor)</h3>
+                    <h3>Video 2: (Cultura y Sabor)</h3>
                     <p>**Ficha Técnica:** Género Documental Corto. **Duración: 2:10 min.** Enfoque en Gastronomía y Artesanía.</p>
                 </div>
+
+                <div class="video-item">
+                    <iframe src="TU_ENLACE_EMBED_VIDEO_2" frameborder="0" allowfullscreen></iframe>
+                    <h3>Video 3:  (Cultura y Sabor)</h3>
+                    <p>**Ficha Técnica:** Género Documental Corto. **Duración: 2:10 min.** Enfoque en Gastronomía y Artesanía.</p>
+                </div>
+
+                <div class="video-item">
+                    <iframe src="TU_ENLACE_EMBED_VIDEO_2" frameborder="0" allowfullscreen></iframe>
+                    <h3>Video 4: Sabores </h3>
+                    <p>**Ficha Técnica:** Género Documental Corto. **Duración: 2:10 min.** Enfoque en Gastronomía y Artesanía.</p>
+                </div>
+            </div>
+            </div>
             </div>
         </section>
         
