--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </button>
             
             <ul class="nav-menu"> <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#portafolio">Portafolio</a></li>
                 <li><a href="#ubicacion">Ubicación</a></li>
                 <li><a href="#contacto">Conectar</a></li>
             </ul>
@@ -40,8 +40,8 @@
                 </div>
         </section>
 
-        <section id="portfolio" class="seccion seccion-portfolio">
-            <h2>NUESTRO PORTFOLIO</h2>
+        <section id="portafolio" class="seccion seccion-portafolio">
+            <h2>NUESTRO PORTAFOLIO</h2>
             <p class="subtitulo">Una muestra de la calidad y la narrativa visual de MILY PRODUCTIONS.</p>
             
             <div class="video-grid">
