--- a/index.html
+++ b/index.html
@@ -47,35 +47,53 @@
             <div class="video-grid">
                 
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_1" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/corazon_subtropical.jpg">
+                        <source src="mi-video-portafolio.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>Corazón Subtropical</h3>
                     <p class="ficha-tecnica">Promocional | Balzapamba | Aventura.</p>
                 </div>
 
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_2" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/video_adicional_1.jpg">
+                        <source src="otro-video-1.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>Título de Video Adicional</h3>
                     <p class="ficha-tecnica">Documental Corto | Gastronomía Local.</p>
                 </div>
 
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_3" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/video_adicional_2.jpg">
+                        <source src="otro-video-2.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>Tradiciones Vivas</h3>
                     <p class="ficha-tecnica">Documental | Cultura y Historia.</p>
                 </div>
 
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_4" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/video_adicional_3.jpg">
+                        <source src="otro-video-3.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>Balzapamba: Tu Destino</h3>
                     <p class="ficha-tecnica">Resumen | Llamada a la Acción.</p>
                 </div>
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_5" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/video_adicional_4.jpg">
+                        <source src="otro-video-4.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>[Título de Video Adicional]</h3>
                     <p class="ficha-tecnica">Ejemplo | Cortometraje.</p>
                 </div>
                 <div class="video-item">
-                    <iframe src="TU_ENLACE_EMBED_VIDEO_6" frameborder="0" allowfullscreen></iframe>
+                    <video controls width="100%" preload="metadata" poster="miniaturas/video_adicional_5.jpg">
+                        <source src="otro-video-5.mp4" type="video/mp4">
+                        Tu navegador no soporta el tag de video HTML5.
+                    </video>
                     <h3>[Título de Video Adicional 2]</h3>
                     <p class="ficha-tecnica">Ejemplo | Eventos.</p>
                 </div>
@@ -91,7 +109,7 @@
                     <p>Balzapamba: la provincia de Bolívar, conectando la sierra con la costa.</p>
                     <div class="mapa-iframe">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1021421.3662584105!2d-79.67137812536832!3d-1.740201201977755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d37b6c59d186c3%3A0x8efb3e83921960d7!2sSan%20Miguel%20de%20Bol%C3%ADvar!5e0!3m2!1ses!2sec!4v1700000000000!5m2!1ses!2sec" 
+                            src="URL_REAL_GOOGLE_MAPS_EMBED" 
                             width="100%" 
                             height="100%" 
                             style="border:0;" 
@@ -99,7 +117,7 @@
                             loading="lazy">
                         </iframe>
                     </div>
-                    <a href="google.com/maps?sca_esv=b6b0734220a77ce1&rlz=1C1FKPE_esEC1169EC1169&output=search&q=balzapamba&source=lnms&fbs=AIIjpHx4nJjfGojPVHhEACUHPiMQht6_BFq6vBIoFFRK7qchKBv8IM7dq8CEqHDU3BN7lbnCpsvCvU63fDXNLh1Cq1fv0rMev-IeypcHbjdADHY7pi7GoCtPX4S5eVXeDYVbA5RTkdc-w73nm3CBykURaG3YzZ3uvRx4L4E7ba4xogWzFuY4gOm7g044QgqQODw-u60xvVG8Ma3HBBCl6wWmIP_x3uuUfg&entry=mc&ved=1t:200715&ictx=111" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
+                    <a href="URL_REAL_GOOGLE_MAPS" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
                 </div>
                 
                 <div class="destacado-card card-campo">
