--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             loading="lazy">
                         </iframe>
                     </div>
-                    <a href="URL_REAL_GOOGLE_MAPS" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
+                    <a href="https://maps.app.goo.gl/pqxmcNFAquskRB9e9" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
                 </div>
                 
                 <div class="destacado-card card-campo">
