--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Balzapamba: la provincia de Bolívar, conectando la sierra con la costa.</p>
                     <div class="mapa-iframe">
                         <iframe 
-                            src="URL_REAL_GOOGLE_MAPS_EMBED" 
+                            src="https://maps.app.goo.gl/tvPNMR6kiQWosrNx6" 
                             width="100%" 
                             height="100%" 
                             style="border:0;" 
@@ -117,7 +117,7 @@
                             loading="lazy">
                         </iframe>
                     </div>
-                    <a href="https://maps.app.goo.gl/pqxmcNFAquskRB9e9" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
+                    <a href="https://www.google.com/maps/place/Balzapamba/@-1.7676171,-79.1893674,15z/data=!4m6!3m5!1s0x91d327ceb38cb453:0x2dd752df709cdb42!8m2!3d-1.7669624!4d-79.1788374!16s%2Fg%2F1tnjkn1t?entry=ttu&g_ep=EgoyMDI1MDkyNC4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn-acento">VER EN GOOGLE MAPS</a>
                 </div>
                 
                 <div class="destacado-card card-campo">
@@ -130,7 +130,6 @@
         </section>
         
         <section id="contacto" class="seccion seccion-connect">
-            <h2>CONECTEMOS</h2>
             <p class="subtitulo">Estamos listos para contar tu próxima historia.</p>
             <p class="email-contacto">Email: <a href="mailto:alombiedah3@unemi.edu.ec">alombiedah3@unemi.edu.ec</a></p>
             <p class="creditos">Angelly Lombeida de Sanchez | MILY PRODUCTIONS [2025]</p>
