--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <h2>CONECTEMOS</h2>
             <p class="subtitulo">Estamos listos para contar tu próxima historia.</p>
             <p class="email-contacto">Email: <a href="mailto:alombiedah3@unemi.edu.ec">alombiedah3@unemi.edu.ec</a></p>
-            <p class="creditos">Angelly Lombeida de Sanchez | MILY PRODUCTIONS [2025]</p>
+            <p class="creditos">Angelly Lombeida de Nelson Sanchez  | MILY PRODUCTIONS [2025]</p>
         </section>
     </main>
     
